@@ -5,6 +5,7 @@
 (COMMENT DESIGNSIZE IS IN POINTS)
 (COMMENT OTHER SIZES ARE MULTIPLES OF DESIGNSIZE)
 (CHECKSUM H 0)
+(SEVENBITSAFEFLAG TRUE)
 (COMMENT
    (CHARWD_ENTRY D 0 R 0.0)
    (CHARWD_ENTRY D 1 R 0.0)
